css/index.css
/*Modal css*/
.modal-header {
	color: white;
    background: #0054ab
}
.bold {
	font-weight: bold;
}
nav {
	margin-bottom: 0px;
	width: 100%;
}

.white{
	color: white !important;
}
.parallax {
    /* The image used */
    background-image: url("img_parallax.jpg");

    /* Set a specific height */
    min-height: 1100px;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
/*HOME CSS*/

@media screen and (max-width: 660px) {
	.subpics {
		min-height: 150px;
	}
	#scrollDownBtn {
		display: none;
	}
	#mainPicture {
		    position: relative;
    background-position: center;


		background-image: url("../images/main-pic-2.png");
		height: 250px;
		width: 100%;
		background-repeat: no-repeat;

			}
			#parallax-1, #parallax-2{
	/*background-attachment: fixed;*/
	    background-size: 100% 100%;
    min-height: 400px;
    background-repeat: no-repeat;
    /*background-size: cover;*/
	}
	#parallax-1 {
		background-image: url("../images/main-pic-4.jpg");
		min-height: 400px;

		background-position: center;
	}
	#parallax-2 {
		background-image: url("../images/rsz_aboutus1.jpg");
		
		background-position: center;
	}
	#businessName {	
    font-family: GillSans-Italic;
    float: left;
    color: white;
    margin-top: 10px;
    font-size: 22px;
}
	.navbar-brand {
		padding-top: 5px !important;
	}
	.homeSubText {
		font-size: 15px;
	}
	.parallaxCaption {
	border-radius: 10px;
    background-color: #0054a6;
    position: relative;
    
    font-size: 40px;
    text-align: center;
    color: white;
    text-shadow: 1px 5px rgb(41, 41, 41);
}
#fb-button-div {
		float: right;
    /* text-align: center; */
    display: block;
    width: 78%;
    margin: 0px auto;
	}
}
@media screen and (min-width: 660px) and (max-width: 830px){
	#mainPicture {
		    position: relative;
    background-position: center;


		background-image: url("../images/main-pic1.png");
		height: 60vh;
		width: 100%;
		background-repeat: no-repeat;

			}
	.subpics {
		min-height: 250px;
		width: 100%;
	}
		#businessName {	
    font-family: GillSans-Italic;
    float: left;
    color: white;
    margin-top: 10px;
    font-size: 25px;
}
#parallax-1, #parallax-2{
		/*
	background-attachment: fixed;*/
    background-repeat: no-repeat;/*
    background-size: cover;*/
	}
	#parallax-1 {
		background-image: url("../images/main-pic-4.jpg");
		min-height: 250px;

    background-position: center;
	}
	#parallax-2 {
		background-image: url("../images/rsz_aboutus1.jpg");
		min-height: 250px;
		background-position: center;

		background-size: 45% 100%;
	}
	.navbar-brand {
		padding-top: 5px !important;
	}
	.parallaxCaption {
	border-radius: 10px;
    background-color: #0054a6;
    position: relative;
    
    font-size: 55px;
    color: white;
    text-shadow: 1px 5px rgb(41, 41, 41);
}
	}
@media screen and (min-width: 830px) {
	#fb-button-div {
		display:block; width:20%; margin:0px auto;
	}
	.subpics {
		height: 280px !important;
		width: 100%
	}
	#scrollDownBtn {
	border-radius: 40px;
	border: 2px solid #e0e0e0;
	width: 50px;
	height: 50px;
	position: absolute;
	z-index: 1;
	top: 575px;
	font-size: 50px;
	left: 48%;
	color: #55E;
}
	#mainPicture {
		height: 100vh;
		background-image: url("../images/main-pic1.png");
		background-repeat: no-repeat;
		/* Set a specific height */
    min-height: 500px;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
	}
	#parallax-1, #parallax-2{
	background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
	}
	#parallax-1 {
		background-image: url("../images/main-pic-4.jpg");
		min-height: 400px;

    background-position: center;
	}
	#parallax-2 {
		background-image: url("../images/FullSizeRender.jpg");
		min-height: 600px;
		background-position: 50% 15%;
	}
	#businessName {	
    font-family: brush script MT;
    float: left;
    color: white;
    margin-top: 15px;
    font-size: 30px;
}
.parallaxCaption {
	border-radius: 10px;
    background-color: #0054a6;
    position: relative;
    
    font-size: 55px;
    color: white;
    text-shadow: 1px 5px rgb(41, 41, 41);
}
}
.staticFont {
	font-size: 16px;
}
.parrallaxContainer{
	background-color: black;
}


ul {
	list-style-type:none;
	
	padding : 2px;
}
ul li{
	padding : 5px;
	font-size: 16px;
}
hr {
	margin-top: 10px !important;
}
a:link, .faq-links{
    text-decoration: none !important; 
    color: #888888 !important;
}
a:visited, .faq-links {
	text-decoration: none !important; 
    color: #888888 !important;
}
a:hover, .faq-links{
	text-decoration: none !important; 
	color: #55afef !important;
}
a:active, .faq-links{
	text-decoration: none !important; 
    color: white !important;
}

.footer-titles{
	color: #55afef ;
}
.project-tagline {
	color: red;
}
#mainPhoto, #mainPhotoXs, #faqPhoto, #familyPhoto, #contactUsPhoto{
	max-width: 100%;
	
}
.homePhotoPlaceHolder {
	width: 80%;
}
#contactUsPhoto{
	height: 200px;
	width: 100%;
}
#contactPhotoContainer {
	width: 1450px;
}
.center{
	text-align: center;
}
.contact-glyphicon {
    font-size: 40px;
    color:#55afef;
}
.about-glyphicon { 
	font-size: 45px;
	color:#55afef;
}
textarea { 
	resize: none;
}

#html {
	margin: 0px;
	padding: 0px;
	overflow-x:hidden;
	width: 100%;
    position: relative;
    min-height: 85%;
}
#body {
    margin: 0 0 100px; /* bottom = footer height */
}
footer {
    position: absolute;
    left: 0;
    bottom: 0;
    height: 0px;
    width: 100%;
}
/*CSS for coupons*/
.coupons {
	border-style: dashed;
	border-width: 5px;

}
	#couponsDiv {
		height: 100%;
	}
	@media screen and (max-width: 660px) {
.carousel-img{
		height: 225px !important;
		width: 100% !important;
	}
		
	}

@media screen and (max-width: 660px) {
	.headerPhotos {
		opacity: .5;
		width: 100%;
		height: 110px;
	}
}
.headerPhotos {
	opacity: .4;
	width: 100%;
}
.imageBackground {
	background-color: black;
}
/*CSS for how it works*/
@media screen and (max-width: 660px) {
	.pricingHeaders {
    position: relative;
    top: -85px;
    color: white;
	border: none;
	display: block;
    margin: 20px auto;
    width: 100%;
}
	.subContainer {
		position: relative;
		top: -75px;
	}
	#desclaimer{
		padding: 0px 10px
	}
	 #couponContainer  {
	 	padding: 0px 20px
	 }
}
@media screen and (min-width: 830px) {
	.pricingHeaders {
    position: absolute;
    top: 110px;
    color: white;
	border: none;
	display: block;
    margin: 15px auto;
    width: 30%;
    text-align: left;
    margin-left: 30px;
}
.coupons {
		min-height: 250px !important;
}
#desclaimer{
		padding: 5px 15px
	}
}

.servicesContainer{
	width: 100%;
	float: left;
}
.stepContainer {
	margin: 15px 0px;
	position: relative;
    float: left;
}
.stepSubDetails {
	    padding: 0px 10px;
}


@media screen and (max-width: 660px) {
	#bedroom-select {
		margin-bottom: 15px;
	}
	.pricingHeaders {
	font-size: 40px;
	float: left;
    /*border-top: 2px solid #e0e0e0;*/
}
	.stepTitle{
	font-size: 40px;
	float: left;
	margin-right: 8px;
}
	.stepDetails {
	border: 2px solid #e0e0e0;
	box-shadow: 0px 6px 6px 1px #888888;
	width: 100%;
	float: right;
}
.stepNumber {
	border: 2px solid #e0e0e0;
    border-radius: 50px;
    font-size: 34px;
    width: 50px;
    height: 50px;
    text-align: center;
    float: left;
    margin-top: 7px;
    margin-bottom: 10px;
}
}
@media screen and (min-width: 660px) and (max-width: 830px){
	#bedroom-select {
		margin-bottom: 15px;
	}
	.pricingHeaders {
	font-size: 40px;
	float: left;
    /*border-top: 2px solid #e0e0e0;*/
}
	.stepTitle{
	font-size: 40px;
	float: left;
	margin-right: 8px;
}
	.stepDetails {
	border: 2px solid #e0e0e0;
	box-shadow: 0px 6px 6px 1px #888888;
	width: 100%;
	float: right;
}
.stepNumber {
	border: 2px solid #e0e0e0;
    border-radius: 50px;
    font-size: 34px;
    width: 50px;
    height: 50px;
    text-align: center;
    float: left;
    margin-top: 7px;
    margin-bottom: 10px;
}
}
@media screen and (min-width: 830px) {
	.pricingHeaders {
	font-size: 40px;
	float: left;
}
	.stepTitle{
	font-size: 45px;
	float: left;
	margin-right: 8px;
	margin-top: 23px;
}
	.stepDetails {
	border: 2px solid #e0e0e0;
	box-shadow: 0px 6px 6px 1px #888888;
	width: 75%;
	float: right;
}
.stepNumber {
	border: 2px solid #e0e0e0;
    border-radius: 50px;
    font-size: 50px;
    width: 75px;
    height: 75px;
    text-align: center;
    float: left;
    margin-top: 20px;
}
}


/*CSS for pricing section*/
#costText {
	font-size: 24px;
	margin-bottom: 10px;
	border: 2px solid #e0e0e0;
}
#costReset {
	margin-bottom: 5px;
}
#estimateDisclaimer {
	font-size: 11.5px;
}
.add-icons {
	font-size: 60px !important;
	color: #55afef;
}
.add-div {
	height: 110px !important;
}
.selected {
	background-color: #55afef !important;
	color: white !important;
}
.selected-text {
	color: white !important;
}
#pricingContainer, #summaryContainer, #guranteeContainer, #contactInfoContainer, .top3Container, .aboutUsContainer{
	border: 2px solid #e0e0e0;
	box-shadow: 0px 1px 0px 1px #888888;
	margin : 10px 0px;
}
.servicesDiv{
	box-shadow : 0px 1px 0px 0px #888888;
	border: 1px solid #e0e0e0;
	margin : 5px 0px;
	font-size: 10px;
	height: 340px;
}
.servicesDiv ul li:before {
	list-style-type: circle;
 	padding-right: 4px;
    color: #0595cc; /* Or a color you prefer */

}
.rating-star {
	color: yellow;
	text-shadow: 0px 1px 4px orange
}
@media screen and (min-width: 660px) and (max-width: 830px){
	
	#guranteeContainer {
		    min-height: 257px;
	}
}

.servicesDiv ul li {
	list-style-type: disc;
    font-size: 14px;
    padding-left: 0px;
    margin-left: 10px;
	}
.servicesDiv h4 {
	color : #0054a6;
}
/* Contact us */
@media screen and (min-width: 830px) {
	#contactInfoContainer {
	margin-left: 19%;
}
}

/*CSS for Careers modal*/
#careerBody h3 {
	margin-top: 0px;
}
#careerBody p {
	font-weight: bold;
}
#careerBody ul {
	line-height: 5px;
	margin-left: 15px;
}
#careerBody ul li ul li {
	list-style-type: circle;
}
#careerBody ul li{
	list-style-type: disc;
}
#careerBody ul li ul li, #careerBody ul li{
	font-size: 12px;
}
/*CSS for FAQ section*/
.faq-divs {
	padding: 5px;
}
.faq-header {
	padding : 10px;
}
.faq-glyphicon {
	color: #55afef !important;
}
.faq-glyphicon-open{
	color: white !important;
}
.toggle-box{
	display: none;
	/*box-shadow: 5px 5px 2.5px #888888;*/
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
}
.open {
	background-color: #55afef !important;
	color: white !important;
}
.faq-links div{
	margin-bottom: 0px !important;
	border: 0px;
}

